[tool.poetry]
name = "emoveo"
version = "0.1.0"
description = ""
authors = ["Noah Gardner <ngngardner@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
rich = "^10.12.0"
beartype = "^0.9.0"

PyPDF2 = "^1.26.0"


[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
flake8 = "^3.9.2"
wemake-python-styleguide = "^0.15.3"

[tool.poetry.scripts]
emoveo = 'emoveo.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
